bugfix:img alt align center

--- a/source-src/main.scss
+++ b/source-src/main.scss
@@ -490,9 +490,10 @@ h2, h3, h4 {
   span {
     &.img-alt {
       max-width: 80%;
-      position: absolute;
+      position: relative;
       left: 50%;
       transform: translateX(-50%);
+      display: inline-block;
       padding: 0px 0 2px;
       border-bottom: 1px solid #d9d9d9;
       font-size: 12px;
